# embedded-cli

./: .gitignore  README.md  meson.build
include/: embcli.h  meson.build
src/: embcli.c  meson.build
test/: main.c  meson.build
